# Vulkan-Nanite

./: .gitignore  CMakeLists.txt  README.md  compileShadesToSpvs.bat
shaders/: CMakeLists.txt  readme.txt  shader.vert
spvs/: vert.spv
src/: CMakeLists.txt  Triangle.cpp  Triangle.h  base.h  camera.cpp  camera.h  gltf.cpp  gltf.h  interact.cpp  interact.h  main.cpp  object.cpp  object.h  sceneManager.cpp  sceneManager.h  ui.cpp  ui.h  vulkanInit.cpp  vulkanInit.h
